fixed modal on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -651,7 +651,8 @@ body {
 .model-container {
    
   animation: showOrderAnimation 0.4s;
-   top: 100px;
+   top: 5%;
+    
  
 }
 .model-header {
@@ -664,10 +665,14 @@ body {
   border-top-right-radius: 10px;
 }
 .model-body{
+  
     padding-bottom: 100px;
     background-color: var(--white);
     border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  max-height: 600px;
+   overflow: auto;
+   padding-bottom: 200px;
 }
 .model-img {
    
